# KungFuChess

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kung-Fu-Chess.sln  PROJECT_OVERVIEW.md  vcpkg.json
.claude/agents/: architect.md  implementer.md  reviewer.md
.claude/skills/code-review/: SKILL.md
.claude/skills/cpp-style/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/doctest-tests/: SKILL.md
.claude/skills/feature-workflow/: SKILL.md
Kung-Fu-Chess/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  Kung-Fu-Chess.cpp  Kung-Fu-Chess.vcxproj  Kung-Fu-Chess.vcxproj.filters  Parser.cpp  Parser.h  Piece.cpp  Piece.h  main.cpp
Kung-Fu-Chess.Tests/: CMakeLists.txt  Kung-Fu-Chess.Tests.vcxproj  Kung-Fu-Chess.Tests.vcxproj.filters  TestMain.cpp
Kung-Fu-Chess.Tests/GameEngine/: ClickTests.cpp  GameOverTests.cpp  JumpTests.cpp  PrintTests.cpp  WaitTests.cpp
Kung-Fu-Chess.Tests/Parser/: ParseBoardTests.cpp
Kung-Fu-Chess.Tests/Piece/: BishopTests.cpp  KingTests.cpp  KnightTests.cpp  PawnTests.cpp  PieceFactoryTests.cpp  QueenTests.cpp  RookTests.cpp
Kung-Fu-Chess.Tests/src/AnimationStateConfig/: AnimationStateConfigTests.cpp
Kung-Fu-Chess.Tests/src/Board/: BoardTests.cpp
Kung-Fu-Chess.Tests/src/BoardMapper/: BoardMapperTests.cpp
Kung-Fu-Chess.Tests/src/CommandProcessor/: CommandProcessorTests.cpp
Kung-Fu-Chess.Tests/src/Controller/: ControllerTests.cpp
Kung-Fu-Chess.Tests/src/GameEngine/: ClickTests.cpp  GameOverTests.cpp  HasActivityTests.cpp  JumpTests.cpp  PrintTests.cpp  PromotionTests.cpp  WaitTests.cpp
Kung-Fu-Chess.Tests/src/Parser/: BoardToStringTests.cpp  RoundTripTests.cpp
Kung-Fu-Chess.Tests/src/Piece/: BishopTests.cpp  PieceFactoryTests.cpp  RookTests.cpp
Kung-Fu-Chess.Tests/src/PieceAnimationConfigProvider/: PieceAnimationConfigProviderTests.cpp
Kung-Fu-Chess.Tests/src/ProtocolIO/: ProtocolIOTests.cpp
Kung-Fu-Chess.Tests/src/RenderLoop/: RenderLoopTests.cpp
Kung-Fu-Chess.Tests/src/RuleEngine/: RuleEngineTests.cpp
Kung-Fu-Chess.Tests/src/SpriteAnimation/: SpriteAnimationTests.cpp
Kung-Fu-Chess.UI/: CMakeLists.txt  Kung-Fu-Chess.UI.vcxproj  Kung-Fu-Chess.UI.vcxproj.filters
Kung-Fu-Chess.UI/include/: animation_state_config.h  asset_path.h  img.h  opencv_input_source.h  piece_anim_phase.h  piece_animation_config_provider.h  piece_naming.h  renderer.h  sprite_animation.h  sprite_frame_counter.h  sprite_manager.h
Kung-Fu-Chess.UI/src/: animation_state_config.cpp  asset_path.cpp  img.cpp  input_source_factory.cpp  main.cpp  opencv_input_source.cpp  piece_animation_config_provider.cpp  piece_naming.cpp  renderer.cpp  renderer_factory.cpp  sprite_animation.cpp  sprite_frame_counter.cpp  sprite_manager.cpp
Kung-Fu-Chess/include/: Board.h  BoardMapper.h  CommandProcessor.h  Constants.h  Controller.h  GameEngine.h  IInputSource.h  IRenderer.h  InputSourceFactory.h  Parser.h  Piece.h  Position.h  ProtocolIO.h  RealTimeArbiter.h  RenderLoop.h  RenderSnapshot.h  RendererFactory.h  RuleEngine.h  Types.h
Kung-Fu-Chess/src/: Board.cpp  BoardMapper.cpp  CommandProcessor.cpp  Controller.cpp  GameEngine.cpp  Parser.cpp  Piece.cpp  ProtocolIO.cpp  RealTimeArbiter.cpp  RenderLoop.cpp  RuleEngine.cpp  main.cpp
